# hbmex-fccm2025

./: .gitignore  .gitmodules  README.md
environment/chext-test/cpp/: CMakeLists.txt
environment/chext-test/cpp/examples/project1/: CMakeLists.txt
environment/chext-test/cpp/include/chext_test/: TestBench.hpp  chext_test.hpp
environment/chext-test/cpp/include/chext_test/amba/axi4/full/: Packets.hpp
environment/chext-test/cpp/include/chext_test/amba/axi4/lite/: Driver.hpp  Packets.hpp
environment/chext-test/cpp/include/chext_test/util/: Exception.hpp  ReadyValid.hpp  Reference.hpp  ScDump.hpp
environment/chext-test/cpp/include/jqr/: core.hpp  dump.hpp  hash.hpp
environment/chext-test/cpp/src/: test1.cpp
environment/hdlscw/cpp/: CMakeLists.txt
rtl/sysc_tb/: CMakeLists.txt  README.md  run_all.sh
rtl/sysc_tb/chext/amba/axi4/full/components/: CMakeLists.txt
rtl/sysc_tb/chext/amba/axi4/full/components/hdl/: IdParallelizeNoReadBurstTestTop1_1.hdlinfo.json  IdParallelizeNoReadBurstTestTop1_1.sv  IdParallelizeNoReadBurstTestTop2_1.hdlinfo.json  IdParallelizeNoReadBurstTestTop2_1.sv  IdParallelizeNoReadBurstTestTop2_2.hdlinfo.json  IdParallelizeNoReadBurstTestTop2_2.sv  IdParallelizeNoReadBurstTestTop2_3.hdlinfo.json  IdParallelizeNoReadBurstTestTop2_3.sv  IdParallelizeNoReadBurstTestTop2_4.hdlinfo.json  IdParallelizeNoReadBurstTestTop2_4.sv  IdParallelizeNoReadBurstTestTop2_5.hdlinfo.json  IdParallelizeNoReadBurstTestTop2_5.sv  IdParallelizeNoReadBurstTestTop2_6.hdlinfo.json  IdParallelizeNoReadBurstTestTop2_6.sv  (+14 more)
rtl/sysc_tb/chext/ip/float/: CMakeLists.txt
rtl/sysc_tb/chext/ip/float/hdl/: ElasticTop.hdlinfo.json  ElasticTop.sv
rtl/sysc_tb/chext/ip/float/src/: ElasticTop.tb.cpp
rtl/sysc_tb/common/: TODO.md
rtl/sysc_tb/common/include/chext_test/elastic/: DataLast.hpp
rtl/sysc_tb/common/include/chext_test/util/: Util.hpp  hal.hpp
rtl/sysc_tb/common/include/hal/: hal.hpp
rtl/sysc_tb/common/src/chext_test/util/: hal.cpp
rtl/sysc_tb/hbmex/components/read_engine/: CMakeLists.txt  protocols.py
rtl/sysc_tb/hbmex/components/read_engine/hdl/: ReadEngineMultiSim1.hdlinfo.json  ReadEngineMultiSim1.sv  ReadEngineMultiTop1_1.hdlinfo.json  ReadEngineMultiTop1_1.sv  ReadEngineSim1.hdlinfo.json  ReadEngineSim1.sv  ReadEngineTop1_1.hdlinfo.json  ReadEngineTop1_1.sv
rtl/sysc_tb/hbmex/components/read_engine/src/: ReadEngineMultiSim1.tb.cpp  ReadEngineMultiTop1.tb.cpp  ReadEngineSim1.tb.cpp  ReadEngineTop1.tb.cpp
rtl/sysc_tb/hbmex/components/spmv/: CMakeLists.txt
rtl/sysc_tb/hbmex/components/spmv/hdl/: RowReduceSingleTop.hdlinfo.json  RowReduceSingleTop.sv  RowReduceSingleTop1_1.hdlinfo.json  RowReduceSingleTop1_1.sv  RowReduceTop.hdlinfo.json  RowReduceTop.sv  RowReduceTop1_1.hdlinfo.json  RowReduceTop1_1.sv  SpmvTop1_1.hdlinfo.json  SpmvTop1_1.sv  SpmvTop2_1.hdlinfo.json  SpmvTop2_1.sv
rtl/sysc_tb/hbmex/components/spmv/include/spmv/: Spmv.hpp  linalg.hpp
rtl/sysc_tb/hbmex/components/spmv/src/: RowReduceSingleTop.tb.cpp  RowReduceSingleTop1.tb.cpp  RowReduceTop.tb.cpp  RowReduceTop1.tb.cpp  SpmvTop1.tb.cpp  SpmvTop2.tb.cpp  linalg.test.cpp
rtl/sysc_tb/hbmex/components/stream/: CMakeLists.txt  protocols.py
rtl/sysc_tb/hbmex/components/stream/expected/: ReadStreamTop1.tb.txt
rtl/sysc_tb/hbmex/components/stream/hdl/: ReadStreamTop1_1.hdlinfo.json  ReadStreamTop1_1.sv  ReadStreamTop2_1.hdlinfo.json  ReadStreamTop2_1.sv  WriteStreamTop1_1.hdlinfo.json  WriteStreamTop1_1.sv
rtl/sysc_tb/hbmex/components/stream/include/: Protocols.hpp
rtl/sysc_tb/hbmex/components/stream/src/: ReadStreamTop1.tb.cpp  ReadStreamTop2.tb.cpp  WriteStreamTop1.tb.cpp
rtl/sysc_tb/tb_output/: README.md
sw/: .gitignore  CMakeLists.txt  README.md
sw/ext/com9n/: CMakeLists.txt
sw/ext/com9n/include/com9n/: d4e.h  defs.h  efd.h  util.h
sw/ext/com9n/src/: d4e.c  efd.c  util.c
sw/ext/com9n/test/: test.com9n.d4e.c2h.c  test.com9n.d4e.h2c.c  test.com9n.efd.c
sw/ext/d4e/: CMakeLists.txt
sw/ext/d4e/include/d4e/: interface.h  xil.h
sw/ext/d4e/src/: interface.c  xil.c
sw/ext/d4e/test/: test.d4e.cdma.c  test.d4e.taskman.c  test.d4e.xil.c  test.d4e.xil.intclear.c  test.d4e.xil.nextevt.c
sw/ext/error/: CMakeLists.txt
sw/ext/error/include/error/: assert.h  common.h  error.h  perr.h
sw/ext/error/src/: common.c
sw/ext/util/: CMakeLists.txt
sw/ext/util/include/util/: buffer.h  cqueue.h  defs.h  lfsr.h  mem.h  misc.h  ptable.h  vector.h
sw/ext/util/src/: cqueue.c  lfsr.c  mem.c  ptable.c  vector.c
sw/ext/util/test/: test.util.cqueue.c  test.util.mem.linear_allocator.c  test.util.ptable.c  test.util.vector.c
sw/include/: d4e_providers.hpp  hbm_explore.hpp
sw/include/fmt/boost/: endian.hpp
sw/include/hal/: d4e.hpp
sw/include/linalg/: Defs.hpp  Exception.hpp  linalg.hpp
sw/include/linalg/algos/: Compare.hpp  Copy.hpp  Product.hpp
sw/include/linalg/exchange/: Binary.hpp  MatrixMarket.hpp
sw/include/linalg/types/: CompressedSparse.hpp  Dense.hpp  Sparse.hpp
sw/include/read_engine/: ReadEngine.hpp
sw/include/spmv/: Allocator.hpp  Defs.hpp  Manager.hpp  Task.hpp  Utils.hpp
sw/misc/: plot_test.py
sw/results/hbm_explore/: output_noReorder.txt  output_noReorderNoLookahead.txt  output_reorder.txt  plot.py
sw/results/hbm_explore2/: output_450MHz_reorder.txt  plot.py  plot_presentation.py
sw/results/hbm_explore3/: README.md  output_defaultRama_reorder.txt
sw/results/spmv_explore/exp_sweep/: exp1.txt  exp2.txt  exp3.txt  plot.py
sw/results/spmv_explore/linear_sweep/: exp1.txt  exp2.txt  exp3.txt
sw/results/suite_sparse/: exp1.txt  exp2.txt  exp3.txt  latex_table.py  plot.py
sw/results/synth/: SpmvExp1_impl3_utilization_hier.post_pr.txt  SpmvExp3_impl3_utilization_hier.post_pr.txt
sw/src/: analyze_csr.cpp  hbm_explore.cpp  hbm_explore2.cpp  hbm_explore3.cpp  linalg_test.cpp  mm2csr.cpp  spmv_explore.cpp  spmv_explore_generate.cpp  suite_sparse.cpp
sw/src/hal/: d4e.cpp  hal.cpp
sw/src/read_engine/: ReadEngine.cpp
sw/src/spmv/: Manager.cpp  Task.cpp
sw/workloads/spmv_explore/: generate.sh
sw/workloads/suite_sparse/: convert.sh  download.sh
(+426 files in other folders)
